<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">
        <ImageView
            android:id="@+id/welcomwImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:src="@drawable/boy_quiz" />
        <TextView
            style="@style/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />
        <TextView
            android:id="@+id/instructions"
            style="@style/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <Spinner
            android:id="@+id/langs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/language_prompt"

            android:entries="@array/languages_array"
            android:layout_gravity="center_horizontal" >

        </Spinner>

        <Button
            style="@style/buttons"
            android:onClick="buttonNext"
            android:text="@string/button_next" />
    </LinearLayout>
</ScrollView>
