<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            style="@style/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_title" />

        <Spinner
            android:id="@+id/langs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/languages_array"
            android:prompt="@string/language_prompt"
            android:spinnerMode="dropdown">

        </Spinner>

        <Button
            style="@style/buttons"
            android:onClick="applyLanguage"
            android:text="@string/applyButton" />

    </LinearLayout>

</ScrollView>